syntax = "proto3";

package proto;

message ChunkMessage {
    string hostname = 1;
    bytes msg = 2;
}